--- a/multi_particle_LodeSTAR.ipynb
+++ b/multi_particle_LodeSTAR.ipynb
@@ -411,6 +411,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -437,6 +444,13 @@
    ],
    "source": [
     "model.save(\"./LodeSTAR_Network\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Testing"
    ]
   },
   {
