--- a/multi_particle_LodeSTAR.ipynb
+++ b/multi_particle_LodeSTAR.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\santh\\Desktop\\Python Projects\\Masters Thesis\\Multi_particleTracking\\Lodestar_particleTracking\\deeptrack\\backend\\_config.py:11: UserWarning: cupy not installed. GPU-accelerated simulations will not be possible\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\santh\\Desktop\\Python Projects\\Masters Thesis\\Multi_particleTracking\\Lodestar_particleTracking\\deeptrack\\backend\\_config.py:25: UserWarning: cupy not installed, CPU acceleration not enabled\n",
+      "  warnings.warn(\"cupy not installed, CPU acceleration not enabled\")\n"
+     ]
+    }
+   ],
    "source": [
     "import deeptrack as dt\n",
     "import numpy as np\n",
@@ -376,7 +387,7 @@
     }
    ],
    "source": [
-    "# Showing the training data\n",
+    "# Checking the training data\n",
     "plt.figure(figsize=(2, 2))\n",
     "plt.imshow(training_set.update().resolve(), cmap = \"gray\", vmin = 0, vmax = 1)\n",
     "plt.colorbar()"
@@ -461,7 +472,7 @@
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.training.tracking.util.CheckpointLoadStatus at 0x177c87a6fd0>"
+       "<tensorflow.python.training.tracking.util.CheckpointLoadStatus at 0x2197fa16250>"
       ]
      },
      "execution_count": 3,
@@ -595,7 +606,7 @@
     "alpha = 0.3 \n",
     "cutoff = 0.35 \n",
     "\n",
-    "test_img_dir = \"./New sequence testing 4\"\n",
+    "test_img_dir = \"./Datasets/New sequence testing 4\"\n",
     "\n",
     "count = 0\n",
     "detections = []\n",
@@ -658,11 +669,184 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Saving positions as a CSV file"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import scipy\n",
+    "alpha = 0.3\n",
+    "cutoff = 0.35\n",
+    "test_img_dir = \"./Datasets/New sequence testing 2\"\n",
+    "count = 0\n",
+    "data = [] # Contains [centroid_x, centroid_y, frame]\n",
+    "for i, fileName in enumerate(os.listdir(test_img_dir)):\n",
+    "    img = np.array(Image.open(test_img_dir+\"/\"+fileName))/255\n",
+    "    \n",
+    "    # upscale img 3x\n",
+    "    upscaled_img = scipy.ndimage.zoom(img, 3, order=0)\n",
+    "\n",
+    "    upscaled_img = np.expand_dims(upscaled_img, axis = 2)\n",
+    " \n",
+    "    detections = (model.predict_and_detect(upscaled_img[np.newaxis], alpha=alpha, beta=1-alpha, cutoff=cutoff, mode=\"constant\")[0])/3#1-alpha\n",
+    "\n",
+    "    for d in range(len(detections)):\n",
+    "        centroid_x = detections[d, 1]\n",
+    "        centroid_y = detections[d, 0] \n",
+    "    \n",
+    "        frame = i\n",
+    "        \n",
+    "\n",
+    "        data.append([centroid_x, centroid_y, frame])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>centroid_x</th>\n",
+       "      <th>centroid_y</th>\n",
+       "      <th>frame</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>457.044586</td>\n",
+       "      <td>4.576764</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>467.181519</td>\n",
+       "      <td>3.811570</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>169.753311</td>\n",
+       "      <td>3.496063</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>416.083954</td>\n",
+       "      <td>4.366373</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>451.578369</td>\n",
+       "      <td>4.671604</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5407</th>\n",
+       "      <td>86.698631</td>\n",
+       "      <td>96.635399</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5408</th>\n",
+       "      <td>431.039703</td>\n",
+       "      <td>96.642212</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5409</th>\n",
+       "      <td>445.484222</td>\n",
+       "      <td>96.969330</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5410</th>\n",
+       "      <td>482.015961</td>\n",
+       "      <td>97.101654</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5411</th>\n",
+       "      <td>455.345612</td>\n",
+       "      <td>97.832520</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5412 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      centroid_x  centroid_y  frame\n",
+       "0     457.044586    4.576764      0\n",
+       "1     467.181519    3.811570      0\n",
+       "2     169.753311    3.496063      0\n",
+       "3     416.083954    4.366373      0\n",
+       "4     451.578369    4.671604      0\n",
+       "...          ...         ...    ...\n",
+       "5407   86.698631   96.635399      9\n",
+       "5408  431.039703   96.642212      9\n",
+       "5409  445.484222   96.969330      9\n",
+       "5410  482.015961   97.101654      9\n",
+       "5411  455.345612   97.832520      9\n",
+       "\n",
+       "[5412 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create the pandas DataFrame\n",
+    "import pandas as pd\n",
+    "df = pd.DataFrame(data, columns = ['centroid_x', 'centroid_y', 'frame'])\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('./positions.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
