--- a/multi_particle_LodeSTAR.ipynb
+++ b/multi_particle_LodeSTAR.ipynb
@@ -29,12 +29,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Defining the dataset\n",
+    "\n",
+    "#### 2.1\n",
+    "The training of LodeSTAR requires just 1 image with a single particle placed near the center of the image. We can also us many images and each image here is taken by cropping from the experimental data and stored in Train_imgs folder."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Images in the ./Train_imgs are cropped from the experimental data\n",
+    "# Loading teh cropped images into a list.\n",
     "\n",
     "img_dir = os.listdir(\"./Train_imgs\") \n",
     "img_list = []\n",
@@ -110,6 +120,15 @@
     "    \n",
     "    np.save(f\"./train_images/{count}.npy\", img)\n",
     "    count+=1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.2 Upscaling the images\n",
+    "\n",
+    "The experimental data has low resolution and to overcome that they are upscaled 3X"
    ]
   },
   {
@@ -394,6 +413,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generator\n",
+    "\n",
+    "Generator creates a new thread and generates images while the model is training. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 54,
    "metadata": {},
@@ -407,6 +435,13 @@
     "    min_data_size=200, \n",
     "    max_data_size=201\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model"
    ]
   },
   {
@@ -436,7 +471,6 @@
    "source": [
     "#Training\n",
     "with generator:\n",
-    "    \n",
     "    model.fit(generator, epochs=50, steps_per_epoch=100)"
    ]
   },
@@ -482,6 +516,13 @@
    ],
    "source": [
     "model.load_weights(\"./LodeSTAR_Network\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Checking the performance with 10 images and showing the results"
    ]
   },
   {
@@ -677,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -689,6 +730,7 @@
     "data = [] # Contains [centroid_x, centroid_y, frame]\n",
     "for i, fileName in enumerate(os.listdir(test_img_dir)):\n",
     "    img = np.array(Image.open(test_img_dir+\"/\"+fileName))/255\n",
+    "    \n",
     "    \n",
     "    # upscale img 3x\n",
     "    upscaled_img = scipy.ndimage.zoom(img, 3, order=0)\n",
@@ -841,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
